# tauri-plugin-mcp

./: .gitignore  Cargo.toml  README.md  SOURCE_CODE_REVIEW.md  package-lock.json  package.json  pnpm-lock.yaml
guest-js/: index.ts
mcp-server-ts/: package.json  pnpm-lock.yaml
mcp-server-ts/src/: index.ts
mcp-server-ts/src/tools/: client.ts  fill_form.ts  get_dom.ts  get_element_position.ts  get_page_map.ts  get_page_state.ts  index.ts  mouse_action.ts  mouse_movement.ts  navigate_back.ts  scroll_page.ts  send_text_to_element.ts  text_input.ts  wait_for.ts
mcp-server-ts/test/: smoke-test.mjs
skills/automate-tauri-desktop-app/: SKILL.md
src/: desktop.rs  lib.rs  models.rs  socket_server.rs
src/native_input/: js_fallback.rs  macos.rs  mod.rs  state.rs  unix.rs  windows.rs
src/platform/: macos.rs  shared.rs  unix.rs
src/shared/: mod.rs
src/tools/: execute_js.rs  local_storage.rs  mod.rs  mouse_movement.rs  ping.rs  take_screenshot.rs  text_input.rs  webview.rs  window_manager.rs
